--- a/public/assets/css/authentication/auth_2.css
+++ b/public/assets/css/authentication/auth_2.css
@@ -10,7 +10,7 @@
   height: 100%;
 }
 .login-bg{
-  background-image: url("/luytech/admindash/admindash/public/image/login.png");
+  background-image: url("https://luytech.greenwebbtech.com/public/image/login.png");
   background-size: cover;
   width: 100%;
   height: 100%;
